--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,6 @@ section {
   justify-content: space-between;
 }
 
-
 section .title {
   position: relative;
   text-align: center;
@@ -204,19 +203,23 @@ section .title::after {
   content: "Who i am";
 }
 
-.about .about-content .left {
-  width: 45%;
-}
 
-.about .about-content .left img {
-  height: 550px;
-  width: 400px;
-  object-fit: cover;
-  border-radius: 6px;
+
+.about .about-content .column {
+  width: 33.33%;
+  width: calc(100% / 3);
+  display: inline-block;
 }
 
 .about .about-content .right {
   width: 55%;
+}
+
+.about .about-content .left img {
+  height: 560px;
+  width: 300px;
+  object-fit: cover;
+  border-radius: 6px;
 }
 
 .about .about-content .right .text {
@@ -259,7 +262,6 @@ section .title::after {
 
 .services .title::before {
   background: #ffff;
-
 }
 
 .services .title::after {
@@ -268,19 +270,22 @@ section .title::after {
 }
 
 .services .serv-content .card {
-
-  width: calc(33% -60px);
+  height: 300px;
+  width: 25%;
+  /* as @passatgt mentioned in the comment, for the older browsers fallback */
+  width: calc(100% / 4);
+  display: inline-block;
   background: #222;
   text-align: center;
   border-radius: 6px;
-  padding: 50px 25px;
+  margin: 50px 25px;
+  padding: 55px 35px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 
 .services .serv-content .card:hover {
   background-color: rgb(0, 184, 0);
-
 }
 
 .services .serv-content .card .box {
@@ -289,14 +294,12 @@ section .title::after {
 
 .services .serv-content .card:hover .box {
   transform: scale(1.05);
-
 }
 
 .services .serv-content .card i {
   font-size: 50px;
   color: rgb(0, 184, 0);
   transition: color 0.3s ease;
-
 }
 
 .services .serv-content .card i:hover {
@@ -304,8 +307,229 @@ section .title::after {
 }
 
 .services .serv-content .card .text {
- 
   font-size: 25px;
   font-weight: 500;
   margin: 10px 0 7px 0;
+}
+
+/* Skills section starts here  */
+
+.skills .title::after {
+  content: "What i know";
+}
+
+.skills .skills-content .column {
+  /* height: 200px;
+  width: 33.33%; */
+  /* as @passatgt mentioned in the comment, for the older browsers fallback */
+  width: calc(50% - 30px);
+  display: inline-block;
+}
+
+.skills .skills-content .left .text {
+  /* width: 60%; */
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.skills .skills-content .left a {
+  display: inline-block;
+  background: rgb(0, 184, 0);
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 16px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid rgb(0, 184, 0);
+  transition: all 0.3s ease;
+}
+
+.skills .skills-content .left a:hover {
+  color: rgb(0, 184, 0);
+  background: none;
+}
+
+.skills .skills-content .left p {
+  text-align: justify;
+  width: 75%;
+}
+
+.skills .skills-content .right .bars {
+  margin-bottom: 15px;
+}
+
+.skills .skills-content .right .info {
+  display: flex;
+  margin-bottom: 5px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.skills .skills-content .right .info span {
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.skills .skills-content .right .line {
+  height: 5px;
+  width: 100%;
+  background: lightgray;
+  position: relative;
+}
+
+.skills .skills-content .right .line::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgb(0, 184, 0);
+}
+
+.skills .skills-content .right .html::before {
+  width: 80%;
+}
+
+.skills .skills-content .right .css::before {
+  width: 70%;
+}
+
+.skills .skills-content .right .js::before {
+  width: 60%;
+}
+
+.skills .skills-content .right .DSA::before {
+  width: 75%;
+}
+
+.skills .skills-content .right .java::before {
+  width: 80%;
+}
+
+/* Contact secton styling */
+
+.contact .title::after {
+  content: "Get in touch";
+}
+
+.contact .contact-content .column {
+  width: calc(50% - 30px);
+  display: inline-block;
+}
+
+.contact .contact-content .text {
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.contact .contact-content .left p {
+  font-size: 20px;
+  font-weight: 400;
+  text-align: justify;
+}
+
+.contact .contact-content .left .icons {
+  margin: 10px 0;
+}
+
+.contact .contact-content .row {
+  display: flex;
+  height: 65px;
+  align-items: center;
+}
+
+.contact .contact-content .row .info {
+  margin-left: 30px;
+}
+
+.contact .contact-content .row .i {
+  font-size: 25px;
+  color: rgb(0, 184, 0);
+}
+
+.contact .contact-content .info .head {
+  font-weight: 500;
+}
+
+.contact .contact-content .info .sub-title {
+  color: #333;
+}
+
+.contact .right form .fields {
+  display: flex;
+  display: block;
+}
+
+.contact .right form .fields,
+.contact .right form .fields .fields {
+  height: 45px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.contact .right form .textarea {
+  height: 80px;
+  width: 100%;
+}
+
+.contact .right form .fields input,
+.contact .right form .textarea textarea {
+  height: 100%;
+  width: 100%;
+  border: 1px solid lightgray;
+  border-radius: 6px;
+  outline: none;
+  padding: 0 15px;
+  font-size: 17px;
+  font-family: sans-serif;
+  transition: all 0.3s ease;
+}
+
+.textarea textarea:focus {
+  border-color: #b3b3b3;
+}
+
+.textarea textarea {
+  padding-top: 10px;
+  resize: none;
+}
+
+.form .botton-area {
+  display: flex;
+  align-items: center;
+}
+
+.right form .button-area button {
+  color: #fff;
+  display: block;
+  width: 100px;
+  height: 50px;
+  outline: none;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 6px;
+  cursor: pointer;
+  flex-wrap: nowrap;
+  background: rgb(0, 184, 0);
+  transition: all 0.3s ease;
+}
+
+.button-area button:hover {
+  color: rgb(0, 255, 0);
+}
+
+/* footer styling starts here */
+
+footer{
+  background: black;
+  color: white;
+  text-align: center;
+  height: 35px;
+}
+footer span{
+  font-size: 15px;
+  margin-top: 12px;
 }
